Mobile: Fix misalignment due to vex sizing
- make sure avatar container is set to content-box instead of border-box

Reviewed-on: https://gerrit.libreoffice.org/c/online/+/101381
Tested-by: Andras Timar <andras.timar@collabora.com>

--- a/loleaflet/css/device-tablet.css
+++ b/loleaflet/css/device-tablet.css
@@ -45,3 +45,6 @@
 	width: 0;
 	height: 0;
 }
+.vex-content .loleaflet-annotation-img {
+	box-sizing: content-box !important;
+}
